test/tests/operators/from_mysql/tls_ciphers_warning.txt
error: invalid TLS cipher list
 --> tests/operators/from_mysql/tls_ciphers_warning.tql:8:16
  |
8 |            tls={skip_peer_verification: true,
  |                ^ `tls.ciphers`
  |
